crates/squealy/tests/compile_fail/empty_generated_update.stderr
error[E0599]: the method `update` exists for struct `__SquealyUserWriteBuilder<'_, TestConnection, HNil, HNil, squealy::MutationFiltered>`, but its trait bounds were not satisfied
  --> tests/compile_fail/empty_generated_update.rs:12:49
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ----- method `update` not found for this struct
...
12 |     let _query = TestConnection.to::<User>().all().update();
   |                                                    ^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/squealy-core/src/list.rs
   |
   | pub struct HNil;
   | --------------- doesn't satisfy `HNil: squealy::NonEmptyUpdateAssignments`
   |
note: trait bound `HNil: squealy::NonEmptyUpdateAssignments` was not satisfied
  --> tests/compile_fail/empty_generated_update.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ unsatisfied bound `HNil: squealy::NonEmptyUpdateAssignments` introduced here
   = help: consider manually implementing the trait to avoid undesired bounds
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
